# cut_helper_tauri

./: LICENSE  README.md  RUST_IMAGE_OPTIMIZATION.md  build_log.txt  components.d.ts  index.html  package-lock.json  package.json  performance_analysis.md  vite.config.js  图片处理迁移到Rust总结.md  自启动功能实现总结.md  配置功能验证说明.md  配置系统实现总结.md
.github/: apt-packages.txt
.github/workflows/: build.yml  node.js.yml  release.yml
src/: App.vue  cut_service.js  db_service.js  hotkey.js  main.js  tray.js
src-tauri/: 2  Cargo.toml  SimpChinese.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: cut_admin.rs  image_processor.rs  mod.rs
src-tauri/src/models/: cut_item.rs  init.rs
src/components/: CutPage.vue  ImageItem.vue  SettingsWindow.vue  TimeList.vue
src/router/: router.js
