[package]
name = "剪切板助手"
version = "1.0.0"
description = "剪切板助手 - 让每一次C,V变得有意义"
authors = ["sallai <sallai@aliyun.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sallai/cut_helper_tauri"
homepage = "https://github.com/sallai/cut_helper_tauri"
keywords = ["clipboard", "tauri", "desktop"]
categories = ["desktop-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
linkme = "0.3.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-positioner = "2.2.0"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

